--- a/frontEnd/src/layout/modal/login/login.module.scss
+++ b/frontEnd/src/layout/modal/login/login.module.scss
@@ -1,9 +1,11 @@
 .form {
-  width: 720px;
+  // width: fit-content;
   height: 500px;
   margin: 50px auto;
-
   padding: 45px 65px;
+  &__login {
+    width: 100%;
+  }
   &__box {
     width: 100%;
     height: 100%;
@@ -57,13 +59,15 @@
     padding: 10px;
     font-size: 14px;
     position: relative;
-    &:after {
-      position: absolute;
-      content: "a***";
+
+    &:focus-visible {
+      outline: none;
     }
   }
 
   &__submit_btn {
+    height: 40px;
+    display: block;
     background: rgb(10, 104, 255);
     cursor: pointer;
     &:hover {
@@ -77,7 +81,7 @@
   }
 
   &__link {
-    color: #71df88;
+    color: rgb(10, 104, 255);
     position: relative;
     &:hover {
       color: #ff3f70;
