--- a/frontEnd/src/pages/home/home.module.scss
+++ b/frontEnd/src/pages/home/home.module.scss
@@ -6,7 +6,10 @@
 }
 
 .container__banner {
-    width: 900px;
+    width: 1300px;
     height: 300px;
-    background-color: red;
+}
+
+.card__image {
+    object-fit: cover;
 }
