--- a/frontEnd/src/App.module.scss
+++ b/frontEnd/src/App.module.scss
@@ -1,9 +1,15 @@
 .container {
   // height: 500px;
-  margin: auto;
   display: flex;
   width: 100%;
   // justify-content: center;
   align-items: center;
   flex-direction: column;
+}
+.content__container {
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  // align-items: center;
+  position: relative;
 }
