--- a/frontEnd/src/layout/header/header.module.css
+++ b/frontEnd/src/layout/header/header.module.css
@@ -147,8 +147,8 @@
 }
 
 .header__account > img,
-.header__cart img,
-.header__home > img {
+.header__home > img,
+.header__cart img {
   width: 24px;
   height: 24px;
   padding: 5px;
@@ -158,4 +158,25 @@
   width: 100%;
   height: 1.5rem;
   /* background-color: aqua; */
+}
+
+.miniCartPopover_container {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  align-items: end;
+}
+
+.miniCartPopover_container > div {
+  margin-top: 20px;
+}
+.miniCartPopover_container > div::before {
+  content: "";
+  position: absolute;
+  bottom: 12%;
+  left: 0px;
+  width: 100%;
+  height: 1px;
+  align-items: center;
+  background-color: var(--header-line-color);
 }
