--- a/frontEnd2/src/assets/style/style.module.scss
+++ b/frontEnd2/src/assets/style/style.module.scss
@@ -116,3 +116,20 @@ $space-between: 20px;
     }
   }
 }
+
+.container {
+  // height: 500px;
+  display: flex;
+  width: 100%;
+  // justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.content__container {
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  margin: auto;
+}
